--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,42 @@ html{
     font-size: 62.5%;
     scroll-behavior: smooth;
 }
+@media (max-width: 75em) {
+    html {
+      font-size: 60%;
+    }
+  }
+  
+@media (max-width: 61.25em) {
+    html {
+      font-size: 58%;
+    }
+}
+  
+@media (max-width: 28.75em) {
+    html {
+      font-size: 55%;
+    }
+}
+body{
+    font-family: 'poppins', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.4;
+    color: var(--main-white);
+}
+h1,h2{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
+h1{
+    font-size: 6rem;
+}
+h2{
+    font-size: 4.2rem;
+}
+
 ul {
     list-style: none;
   }
@@ -58,4 +94,25 @@ a {
   
 .nav-list a:hover {
     background: var(--main-blue);
-  }
+}
+.welcome-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    background-image: linear-gradient(
+        62deg,
+        #3a3d40 0%,
+        #181719 100%
+    );
+}
+.welcome-section > p{
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: var(--main-red);
+
+}
